--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-starter",
+  "name": "words",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -16,9 +16,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-spring/web": "^9.4.4",
     "clsx": "^1.1.1",
     "next": "12.0.10",
     "next-themes": "^0.0.15",
+    "nextjs-progressbar": "^0.0.14",
     "preact": "^10.6.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
