--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "preact": "^10.7.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "tailwind-merge": "^1.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.4",
